--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: minima
+title: Jesskidding's awesome Knowledge Base of IT, Security and Computer Science concepts.
+author: Jesskidding
+description: Some things I found useful for IT, programming and hacking. 
