--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ title: Jesskidding's awesome Knowledge Base of Information Technology Cybersecur
 author: Jesskidding
 description: Some things I found useful for IT programming and hacking.
 theme: minima
+  skin: dark
