--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ title: Jesskidding's awesome Knowledge Base of Information Technology Cybersecur
 author: Jesskidding
 description: Some things I found useful for IT programming and hacking.
 theme: minima
-  skin: dark
+skin: dark
+![Security](https://www.firstline-it.com/wp-content/uploads/2021/01/Security-Consulting.jpg "Security")
