--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ author: Jesskidding
 description: Some things I found useful for IT programming and hacking.
 theme: minima
 skin: dark
-![Security](https://www.firstline-it.com/wp-content/uploads/2021/01/Security-Consulting.jpg "Security")
+image: ![Security](https://www.firstline-it.com/wp-content/uploads/2021/01/Security-Consulting.jpg "Security")
