Update config and layout for improved readability

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Jesskidding's awesome Knowledge Base of Information Technology Cybersecurity and Computer Science concepts.
+title: Resources and Guides for IT, Cybersecurity, and CompSci
 author: Jesskidding
-description: Some things I found useful for IT programming and hacking.
+description: A collection of useful tools and insights for IT programming and hacking.
 theme: minima
